Fix a bug on the index where non-fiction books would load in the recent fiction query. Also tweaked the relative date display again. Fix the z-index on the page-title on the index.

--- a/lemonade_soapbox/assets/sass/reviews/components/_page-title.scss
+++ b/lemonade_soapbox/assets/sass/reviews/components/_page-title.scss
@@ -69,6 +69,7 @@
   .page-title.-homepage {
     height: auto;
     padding-top: 0;
+    z-index: 1;
     background: none;
   }
 }
